# android_pro

./: .gitignore  README.md  app.aab.ssp  baeedfrydk.jks  build.gradle  bwbaza.jks  cff.jks  data.txt  google-services.json  gradle.properties  local.properties  sgs.jks  wtgieox.jks  别名和密码.txt
EncryptJS/: EncryptTools.java  EncryptTools.py  UnZipFile.py  ZipFile.py  解密、解压代码.java
EncryptJS/plugin_class_tools/: JavacTools.py
EncryptJS_New/: EncryptTools_AES.java  JavacTools.py  java代码加密后解密及调用.txt  readme.txt  插件动态加载及加密so.txt
EncryptJS_New/javac_class/: neEXvBeMdPHnoL.lua  tnlrIbcNTEow.doc
EncryptJS_New/proguard_files/: BERUZ  (+54 more)
MixedSlotsAndroid模板4时区/: build.gradle  local.properties
clientComponent/: UserDefault.xml  brazil_Config.json  brazil_IpList.json  logfile.txt  version.plist
frameworks/runtime-src/hxlibnetv3/: CMakeLists.txt
frameworks/runtime-src/hxlibnetv3/include/: hxlibnetv3.h  hxnet_coding++.h
frameworks/runtime-src/hxlibnetv3/prebuilt/android/: Android.mk
frameworks/runtime-src/hxlibnetv3/prebuilt/win32/Debug/: hxlibnetv3.lib
frameworks/runtime-src/hxlibnetv3/prebuilt/win32/Release/: hxlibnetv3.lib
game/: .cocos-project.json  main.js  settings.gradle
info/: 2.1.ComponentLocal.bat  2.2.ComponentDebug.bat  2.3.ComponentPreRelease.bat  2.4.ComponentRelease.bat  game_list.txt  game_list_bx.txt  iconresize.py  make_md5_bx.bat  make_md5_new.bat  new_encrypt_bx.bat  new_encrypt_bx.py  zip_file.bat
info2/: debug.bat
launcher/: build.gradle
res_carapace/: AndroidManifest.xml  CopyRes.py  CopyResComponent.py
unityLibrary/: build.gradle
(+5580 files in other folders)
